Improved U.fetch() and U.downloadUrl()